--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,10 @@
         <item name="android:windowBackground">@color/myWindowBackground</item>
     </style>
 
+    <style name="TransparentText">
+        <item name="android:textColor">#00000000</item>
+    </style>
+
     <!-- Launch -->
     <style name="LaunchTheme" parent="Theme.AppCompat.NoActionBar">
         <item name="android:windowNoTitle">true</item>
