--- a/app/src/main/res/layout/item_city.xml
+++ b/app/src/main/res/layout/item_city.xml
@@ -24,8 +24,12 @@
             android:src="@mipmap/city_icon"/>
 
         <TextView
+            android:id="@+id/cityName"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+            android:layout_height="wrap_content"
+            android:text="佛山"
+            android:textSize="16dp"
+            android:layout_marginLeft="16dp"/>
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
