Modify and add~

--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -31,7 +31,7 @@
         android:layout_height="168dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@mipmap/day">
+        android:background="@color/myPrimaryDarkColor">
 
     </RelativeLayout>
     
