--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -3,7 +3,7 @@
                 android:id="@+id/googleDrawer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@android:color/white">
+                android:background="@android:color/white" >
 
     <View
         android:id="@+id/separator"
@@ -11,7 +11,7 @@
         android:layout_height="1dp"
         android:layout_below="@+id/navigationHeader"
         android:layout_marginBottom="8dp"
-        android:background="#1f000000"/>
+        android:background="#1f000000" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/drawerList"
@@ -24,15 +24,57 @@
         android:focusable="true"
         android:focusableInTouchMode="true"
         android:scrollbars="vertical" />
-
     <RelativeLayout
         android:id="@+id/navigationHeader"
         android:layout_width="match_parent"
         android:layout_height="168dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:background="@color/myPrimaryDarkColor">
+        android:background="@color/myPrimaryDarkColor"
+        android:paddingTop="24dp" >
 
+        <com.simonluo.daidai_weather.view.CircleImageView
+            android:id="@+id/imgAvatar"
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="18dp"
+            android:layout_marginTop="12dp"
+            android:src="@mipmap/img_user_head" />
+
+        <LinearLayout
+            android:id="@+id/linearLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imgAvatar"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="12dp"
+            android:orientation="vertical" >
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/imgAvatar"
+            android:layout_below="@+id/imgAvatar"
+            android:layout_marginTop="5dp"
+            android:text="Simon"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
+
+        <ImageView
+            android:id="@+id/imageView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginRight="18dp"
+            android:layout_marginTop="10dp"
+            android:src="@mipmap/ic_drawer_logout" />
     </RelativeLayout>
-    
+
 </RelativeLayout>
