--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="myTextPrimaryColor">#FFFFFF</color>
     <color name="myWindowBackground">#DEDEDE</color>
     <color name="colorCityDay">#5c8392</color>
+    <color name="colorSunset">#201D45</color>
 </resources>
